--- a/US Debt Excel Project/README
+++ b/US Debt Excel Project/README
@@ -1,1 +1,1 @@
-
+The US Debt Tracker project was completed using Microsoft Excel. The data first had go through the cleaning phase which consisted of transposing the data
