--- a/US Debt Excel Project/README
+++ b/US Debt Excel Project/README
@@ -1,24 +1,22 @@
-The US Debt Tracker project was completed using Microsoft Excel. 
+This project was completed using Microsoft Excel to analyze and visualize trends in the United States national debt over time.
 
-The data first had go through the cleaning phase which consisted of:
+Data Preparation:
+The raw dataset required several cleaning steps to ensure accuracy and usability:
 
--- Transposing The Data so that the columns and rows lined up. 
--- The numbers were in scientific notations, so changed it to numbers to help it make sense with respect to each column. 
+Raw Data Screenshot: 
 
-Once the data was cleaned, then I moved on to: 
+Transposed the data to align rows and columns correctly for analysis.
+Converted scientific notation into standard number formats to accurately reflect the figures in each column.
+Analysis Steps:
+Once the data was cleaned, I performed the following analyses:
 
--- Looking at the Yearly Percentage Change, Monthly Historicals by creating a pivot table, and the projected growth using the 
-forecast function. 
-
-The Final Outputs shows us: 
-
--- The average increase was around 5% in the previous years of 2016-2019. 
--- There was a large spike that was most likely caused by the COVID-19 Pandemic responses in the USA. 
--- Highest debt increases were during the months of January, February, November, and December. 
--- Lowest debt increases were during the months of April, May, June, and July. 
--- Publicly held debt is projected to increase at a stady rate. 
-
-Please see xlsx file to get further details on summary/conclusions. 
-
-
+Calculated the Yearly Percentage Change in national debt.
+Created Monthly Historical Trends using Pivot Tables.
+Used the FORECAST function to project future debt trends.
+Key Findings:
+The average annual increase in debt between 2016 and 2019 was approximately 5%.
+A significant spike in national debt aligns with the COVID-19 pandemic response measures in the U.S.
+The highest monthly increases typically occurred in January, February, November, and December.
+The lowest increases were seen during April, May, June, and July.
+Publicly held debt is projected to continue increasing at a steady rate in the near future.
 
