--- a/US Debt Excel Project/README
+++ b/US Debt Excel Project/README
@@ -22,8 +22,13 @@ https://github.com/curlyeje/Elliott_Portfolio/blob/2c1cdd7d13f894b680949a21f0df2
 
 2. Created Monthly Historical Trends using Pivot Tables.
 
+Monthly Historicals Screenshot: 
+https://github.com/curlyeje/Elliott_Portfolio/blob/504b648df25b79ae36ea63a0c33f95f89c439336/US%20Debt%20Excel%20Project/Monthly%20Historicals.png
+
 
 3. Used the FORECAST function to project future debt trends.
+
+Projected Growth Screenshot: 
 
 Key Findings:
 The average annual increase in debt between 2016 and 2019 was approximately 5%.
