--- a/US Debt Excel Project/README
+++ b/US Debt Excel Project/README
@@ -29,6 +29,13 @@ https://github.com/curlyeje/Elliott_Portfolio/blob/504b648df25b79ae36ea63a0c33f9
 3. Used the FORECAST function to project future debt trends.
 
 Projected Growth Screenshot: 
+https://github.com/curlyeje/Elliott_Portfolio/blob/0a62ba2ce3d621d7a800ee48a8763e38e0f6059f/US%20Debt%20Excel%20Project/Projected%20Growth.png
+
+4. Final Outputs 1 Screenshot: 
+
+5. Final Outputs 2 Screenshot: 
+
+6. Final Outputs 3 Screenshot: 
 
 Key Findings:
 The average annual increase in debt between 2016 and 2019 was approximately 5%.
