--- a/US Debt Excel Project/README
+++ b/US Debt Excel Project/README
@@ -41,9 +41,9 @@ https://github.com/curlyeje/Elliott_Portfolio/blob/f5435aa8b35a7d299a071a3f9fa10
 https://github.com/curlyeje/Elliott_Portfolio/blob/14f1787dfed7443dc071fbee9ae9345c3478e280/US%20Debt%20Excel%20Project/Final%20Outputs-3.png
 
 Key Findings:
-The average annual increase in debt between 2016 and 2019 was approximately 5%.
-A significant spike in national debt aligns with the COVID-19 pandemic response measures in the U.S.
-The highest monthly increases typically occurred in January, February, November, and December.
-The lowest increases were seen during April, May, June, and July.
-Publicly held debt is projected to continue increasing at a steady rate in the near future.
+- The average annual increase in debt between 2016 and 2019 was approximately 5%.
+- A significant spike in national debt aligns with the COVID-19 pandemic response measures in the U.S.
+- The highest monthly increases typically occurred in January, February, November, and December.
+- The lowest increases were seen during April, May, June, and July.
+- Publicly held debt is projected to continue increasing at a steady rate in the near future.
 
